--- a/Lab 5 - SCSS/assets/css/variables.scss
+++ b/Lab 5 - SCSS/assets/css/variables.scss
@@ -4,4 +4,8 @@ $default-heading-bg: teal;
 $default-heading-text-color: white;
 $text-transform-upper: uppercase;
 $text-transform-lower: lowercase;
-$default-padding: 30px;
+$default-padding: 40px;
+$primary-bg-color: tomato;
+$relative-bg-color: #c1c1c1;
+$default-top-position:30px;
+$default-left-position:30px;
