--- a/Lab 5 - SCSS/assets/css/style.css
+++ b/Lab 5 - SCSS/assets/css/style.css
@@ -1,3 +1,12 @@
+.test {
+  margin-left: 50px; }
+
+.test1 {
+  margin-top: 20px; }
+
+.test2 {
+  margin-right: 50px; }
+
 .container {
   height: 600px;
   width: 100%;
